cabal-version:      2.4
name:               Ninety-Nine-Questions
version:            0.1.0.0
author:             Daniel Sokil
maintainer:         dtechtours@gmail.com
extra-source-files: README.md

executable Ninety-Nine-Questions
    main-is:          Main.hs
    build-depends:    base
    hs-source-dirs:   app
    default-language: Haskell2010

library
    hs-source-dirs:
        app/Problem
    build-depends:
        base
